Add jvisualvm profile for startup profile
1. Start JVisualVM
2. Install JVisualVM plugin Startup Profiler
3. Select Menu / Application / Profile Startup
Platform: Java
Port: 5140
Profile: CPU
Start profiling from class: org.apache.jmeter.threads.JMeterThread
[v] Profile new Runnables
Do not profile class: javax.*, sun.*, sunw.*, com.sun.*

4. bress Profile button in "Profile Sturtum" JVisualVM

5. start test with jvisualvm profile:
mvn jmeter:jmeter -P smallResult,PostProcessors.HTML.x.Boundary,jvisualvm